# phontext

./: .gitignore  README.md  setup.cfg  setup.py
phontext/: __init__.py  corpus.py  io.py  parser.py  read_files.py  word.py
src/phontext/: __init__.py  corpus.py  parser.py  word.py
tests/: test_corpus.py  test_word.py
