[metadata]
name = phontext
version = 0.0.2
author = Rolando Muñoz Aramburú
author_email = rolando.muar@gmail.com
description = Tools for doing phonology analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rolandomunoz/phontext
project_urls =
    Bug Tracker = https://github.com/rolandomunoz/phontext/issues
    Documentation = https://github.com/rolandomunoz/phontext
    Source = https://github.com/rolandomunoz/phontext
classifiers =
    Topic :: Text Processing :: Linguistic
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
keywords = 
    Phonology
    Analysis
    Linguistics
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src